kubernetes/app/kong-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tcc-kong-ui-pod  
  labels:
    app: tcc-kong-ui-pod
spec:
  containers:
    - name: container-tcc-kong-ui
      image: pantsel/konga
      imagePullPolicy: Always
      ports:
      - containerPort: 1337
        name: http
