kubernetes/app/tcc-norma-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcc-norma-api-deployment
spec:  
  selector:
      matchLabels:
        name: tcc-norma-api-pod     
  template:
    metadata:
      labels:
        name: tcc-norma-api-pod
    spec:
      containers:
        - name: container-norma-ind-api
          image: docker.io/srochg/tcc-norma-api
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
