kubernetes/app/tcc-rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcc-rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcc-ampq-rabbitmq
  template:
    metadata:
      name: tcc-ampq-rabbitmq
      labels:
        app: tcc-ampq-rabbitmq
    spec:            
      containers:
        - name: tcc-rabbitmq-pod
          image: rabbitmq:3-management
          volumeMounts:
          - mountPath: /var/lib/rabbitmq
            name: rabbitmq-pv-volume
      volumes:
        - name: rabbitmq-pv-volume
          persistentVolumeClaim:
            claimName: rabbitmq-pv-claim
