kubernetes/app/tcc-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tcc-db-svc
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: tcc-db-postgress
