kubernetes/app/tcc-front-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: tcc-web-service
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080  

  selector:
    name: tcc-web-pod
