kubernetes/app/tcc-router-api-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: tcc-router-api-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    name: tcc-router-api-pod
