kubernetes/app/tcc-ms-route-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"   # Domain name of the external website
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: tcc-api-gateway
  namespace: default
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "*"
  gateways:
    - ingress-gateway-configuration
  http:
    - match:
      - uri:  # IF
          prefix: "/"
      route: # THEN
      - destination:
          host: tcc-router-api-service.default.svc.cluster.local
          subset: original
          
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: tcc-api-gateway
  namespace: default
spec:
  host: tcc-router-api-service.default.svc.cluster.local
  subsets:
    - labels:
        name: tcc-router-api-pod
      name: original
